app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: college-app
  namespace: gateway-ns
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: college-app

  template:
    metadata:
      labels:
        app: college-app
    spec:
      containers:
        - name: college-app
          image: kajapathyk/duniversity-college-portal:latest
          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: college-service
  namespace: gateway-ns
spec:
  selector:
    app: college-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
