mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: college-mysql
  namespace: gateway-ns
spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: college-mysql

  template:
    metadata:
      labels:
        app: college-mysql
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - containerPort: 3306

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            # ADDED (init.sql mount)
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: college-mysql-pvc

        # ADDED (ConfigMap volume)
        - name: mysql-initdb
          configMap:
            name: mysql-init-script

---
apiVersion: v1
kind: Service
metadata:
  name: college-mysql-service
  namespace: gateway-ns
spec:
  selector:
    app: college-mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
