college-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: college-route
  namespace: gateway-ns
spec:
  parentRefs:
    - name: fitness-gateway
      namespace: gateway-ns

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /college

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /

      backendRefs:
        - name: college-service
          port: 80
